更新旧的代码逻辑